# pyreact

./: README.md  main_web.py  pyproject.toml
examples/: components.py  main_tools.py  main_web.py  router_agent.py  tools.py
integrations/: dspy_agent.py
pyreact/: __init__.py
pyreact/prebuilt/domain/: keystroke.py
pyreact/tools/: __init__.py  hooks.py  schema.py  tool.py
pyreact/web/static/: app.js  base.html
