[project]
name = "pyreact"
version = "0.1.0"
description = ""
readme = "README.md"
authors = [
    { name = "Edmar Miyake", email = "edmar.miyake@gmail.com" },
    { name = "Arthur Jacobina", email = "email27arthur@gmail.com" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "dspy>=3.0.1,<4.0.0",
    "fastapi[standard]>=0.116.1,<0.117.0",
    "nicegui>=2.21.1,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "ruff>=0.12.9,<0.13.0",
    "uvicorn>=0.35.0,<0.36.0",
    "watchgod>=0.8.2,<0.9.0",
]

[tool.setuptools]
packages = ["pyreact"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
pyreact = ["web/static/base.html"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
